fix: 이미지 주소 수정

--- a/homi.html
+++ b/homi.html
@@ -52,7 +52,7 @@
       card.className = "bigCard";
 
       var img = document.createElement("img");
-      img.src = "/img/homi/HOMI_" + i + ".jpeg";
+      img.src = "img/homi/HOMI_" + i + ".jpeg";
 
       card.appendChild(img);
       container.appendChild(card);
