--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <article class="media">
       <figure>
         <a href="objectify.html" class="hoverCard">
-          <img src="/img/objectify.webp">
+          <img src="img/objectify.webp">
           <div class="projectInfo">
             <div class="projectLine"></div>
             <div class="projectName">objectify (2022)</div>
@@ -40,7 +40,7 @@
 
       <figure>
         <a href="popy.html" class="hoverCard">
-          <img src="/img/popy.webp">
+          <img src="img/popy.webp">
           <div class="projectInfo">
             <div class="projectLine"></div>
             <div class="projectName">popy (2022)</div>
@@ -52,7 +52,7 @@
 
       <figure>
         <a href="xcombat.html" class="hoverCard">
-          <img src="/img/xcombat.webp">
+          <img src="img/xcombat.webp">
           <div class="projectInfo">
             <div class="projectLine"></div>
             <div class="projectName">X-COMBAT (2022)</div>
@@ -64,7 +64,7 @@
 
       <figure>
         <a href="urth.html" class="hoverCard">
-          <img src="/img/urth.webp">
+          <img src="img/urth.webp">
           <div class="projectInfo">
             <div class="projectLine"></div>
             <div class="projectName">Urth (2021)</div>
@@ -76,7 +76,7 @@
 
       <figure>
         <a href="homi.html" class="hoverCard">
-          <img src="/img/homi.webp">
+          <img src="img/homi.webp">
           <div class="projectInfo">
             <div class="projectLine"></div>
             <div class="projectName">HOMI (2021)</div>
