--- a/objectify.html
+++ b/objectify.html
@@ -52,7 +52,7 @@
       card.className = "card";
 
       var img = document.createElement("img");
-      img.src = "/img/objectify/obj" + i + ".jpg";
+      img.src = "img/objectify/obj" + i + ".jpg";
 
       card.appendChild(img);
       container.appendChild(card);
