--- a/urth.html
+++ b/urth.html
@@ -52,7 +52,7 @@
       card.className = "card";
 
       var img = document.createElement("img");
-      img.src = "/img/urth/urth-" + i + ".png";
+      img.src = "img/urth/urth-" + i + ".png";
 
       card.appendChild(img);
       container.appendChild(card);
