--- a/xcombat.html
+++ b/xcombat.html
@@ -55,7 +55,7 @@
       card.className = "card";
 
       var img = document.createElement("img");
-      img.src = "/img/xcombat/x-com" + i + ".png";
+      img.src = "img/xcombat/x-com" + i + ".png";
 
       card.appendChild(img);
       container.appendChild(card);
