--- a/popy.html
+++ b/popy.html
@@ -50,7 +50,7 @@
       card.className = "bigCard";
 
       var img = document.createElement("img");
-      img.src = "/img/popy/popy" + i + ".jpg";
+      img.src = "img/popy/popy" + i + ".jpg";
 
       card.appendChild(img);
       container.appendChild(card);
